--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.0",
-		"laravel/framework": "^5.4",
+		"laravel/framework": ">=5.4",
         "moneyphp/money" : "^3.0"
     },
     "require-dev": {
